# SpotifySearchService

./: .env  Cargo.toml  diesel.toml
migrations/2024-08-09-161101_create_stream_data_tables/: down.sql  up.sql
migrations/2024-08-13-094803_uploads/: down.sql  up.sql
migrations/2024-08-15-110945_expanding-uploads/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
