[package]
name = "MusicInsightsSearchService"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "numeric"] }
dotenv = "0.15.0"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = "0.3.18"
actix-web = "4"

